--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/common": "^15.2.3",
     "@angular/compiler": "^15.2.3",
     "@angular/core": "^15.2.3",
-    "@angular/fire": "^7.2.0",
+  "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.3",
     "@angular/localize": "^15.2.3",
     "@angular/platform-browser": "^15.2.3",
@@ -56,11 +56,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
+  "@angular-eslint/builder": "^15.2.1",
+  "@angular-eslint/eslint-plugin": "^15.2.1",
+  "@angular-eslint/eslint-plugin-template": "^15.2.1",
+  "@angular-eslint/schematics": "^15.2.1",
+  "@angular-eslint/template-parser": "^15.2.1",
     "@angular/cli": "^15.2.4",
     "@angular/compiler-cli": "^15.2.3",
     "@angular/language-service": "^15.2.3",
