--- a/pageclip-webhook/package.json
+++ b/pageclip-webhook/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20.10.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
