--- a/pageclip-webhook/tsconfig.json
+++ b/pageclip-webhook/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
+    "types": ["node", "dotenv"],
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
